--- a/css/scss/configuration.scss
+++ b/css/scss/configuration.scss
@@ -45,11 +45,13 @@ $text-list: (
   auction-dollar "Muller" bold normal 16px 20px 20px color("grey"),
   auction-time-text "Muller" bold normal 16px 20px 20px white,
   auction-clock-num "Muller" bold normal 30px 48px 48px white,
-  oth-auc-heading "Russo One" regular normal 20px 20px 20px color("black"),
+  second-heading "Russo One" regular normal 20px 20px 20px color("black"),
   oth-auc-user "Muller" bold normal 16px 16px 16px white,
   oth-auc-title "Muller" bold normal 20px 20px 20px white,
   oth-auc-price "Muller" bold normal 20px 20px 20px color("blue-neon"),
   oth-auc-time "Muller" bold normal 16px 16px 16px color("grey"),
+  subscribe-text "Muller" bold normal 12px 12px 12px white,
+  subscribe-input "Muller" regular normal 16px 20px 20px color("extra-white"),
   best-sellers-user "Muller" bold normal 16px 16px 16px color("black"),
   best-sellers-title "Muller" bold normal 20px 48px 48px color("black"),
   best-sellers-price "Muller" bold normal 12px 20px 20px color("black"),
